
- Issue #13447: Add a test file to host regression tests for bugs in the
  scripts found in the Tools directory.

- Issue #8033: sqlite3: Fix 64-bit integer handling in user functions
  on 32-bit architectures. Initial patch by Philippe Devalkeneer.

Extension Modules
-----------------

- Issue #14212: The re module didn't retain a reference to buffers it was
  scanning, resulting in segfaults.


What's New in Python 3.2.3 release candidate 2?
===============================================

*Release date: XX-Mar-2012*

Library
-------

- Issue #6884: Fix long-standing bugs with MANIFEST.in parsing in distutils
  on Windows.

Extension Modules
-----------------

- Issue #14234: CVE-2012-0876: Randomize hashes of xml attributes in the hash
  table internal to the pyexpat module's copy of the expat library to avoid a
  denial of service due to hash collisions.  Patch by David Malcolm with some
  modifications by the expat project.


What's New in Python 3.2.3?
===========================

*Release date: XX-Mar-2012*

Core and Builtins
-----------------

Library
-------


What's New in Python 3.2.3 release candidate 2?
===============================================

*Release date: 18-Mar-2012*

Library
-------

- Issue #6884: Fix long-standing bugs with MANIFEST.in parsing in distutils
  on Windows.

Extension Modules
-----------------

- Issue #14234: CVE-2012-0876: Randomize hashes of xml attributes in the hash
  table internal to the pyexpat module's copy of the expat library to avoid a
  denial of service due to hash collisions.  Patch by David Malcolm with some
  modifications by the expat project.


What's New in Python 3.2.3 release candidate 1?
===============================================

*Release date: 24-Feb-2012*

Core and Builtins
-----------------

- Issue #13703: oCERT-2011-003: add -R command-line option and PYTHONHASHSEED
  environment variable, to provide an opt-in way to protect against denial of